[tool.poetry]
name = "sir-lopez-ii"
version = "0.1.0"
description = ""
authors = ["Replit user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
imgurpython = "^1.1.7"
praw = "^7.2.0"
selenium = "^3.141.0"
aiohttp = "^3.7.4"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
